objects/tysosla__SLA_Tracking__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sets follow-up time for different priorities and business hour rules.</description>
    <fields>
        <fullName>tysosla__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Custom_Key__c</fullName>
        <label>Custom Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tysosla__Priority__c</fullName>
        <label>Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Resolution_Time_Hours__c</fullName>
        <label>Resolution Time (Hours)</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tysosla__Resolution_Time__c</fullName>
        <description>Expressed in Days.</description>
        <inlineHelpText>Expressed in Days.</inlineHelpText>
        <label>Resolution Time</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tysosla__Response_Time__c</fullName>
        <label>Response Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tysosla__field0__c</fullName>
        <label>field0</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__field1__c</fullName>
        <label>field1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__field2__c</fullName>
        <label>field2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SLA Tracking</label>
</CustomObject>